# rust_sgx_test

ocall/app/: build.rs
ocall/app/src/: main.rs
ocall/enclave/: Enclave.edl
ocall/enclave/src/: lib.rs
ocall_beta/: Makefile
ocall_beta/app/: Cargo.toml
ocall_beta/app/src/: main.rs
ocall_beta/enclave/: Cargo.toml  Enclave.edl  Enclave_private.pem  Makefile
ocall_beta/enclave/src/: lib.rs
